Bug 508081 - Within kmymoney-5.2-4613-linux-gcc-x86_64.AppImage version Goto Ledger button in the Investment Tab isn't working
Summary: Within kmymoney-5.2-4613-linux-gcc-x86_64.AppImage version Goto Ledger button...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-10 12:08 UTC by Michael Carpino
Modified: 2025-08-11 12:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Carpino 2025-08-10 12:08:21 UTC
SUMMARY

Within the kmymoney-5.2-4613-linux-gcc-x86_64.AppImage version Goto Ledger button in the Investment Tab isn't working

STEPS TO REPRODUCE

1.  Open Investment tab
2.  Select investment account
3. Click Goto Ledger

OBSERVED RESULT

Ledger doesn't open

EXPECTED RESULT

Ledger should open
Comment 1 Thomas Baumgart 2025-08-10 17:01:45 UTC
Git commit 53934e86277ae369373289b93bdc63c76a82770a by Thomas Baumgart.
Committed on 10/08/2025 at 17:01.
Pushed by tbaumgart into branch 'master'.

Enable QAction before using it

The behavior of a disabled QAction differs between Qt5 and Qt6
FIXED-IN: 5.2.2

M  +3    -0    kmymoney/views/kinvestmentview.cpp

https://invent.kde.org/office/kmymoney/-/commit/53934e86277ae369373289b93bdc63c76a82770a
Comment 2 Michael Carpino 2025-08-10 17:10:17 UTC
(In reply to Thomas Baumgart from comment #1)
> Git commit 53934e86277ae369373289b93bdc63c76a82770a by Thomas Baumgart.
> Committed on 10/08/2025 at 17:01.
> Pushed by tbaumgart into branch 'master'.
> 
> Enable QAction before using it
> 
> The behavior of a disabled QAction differs between Qt5 and Qt6
> FIXED-IN: 5.2.2
> 
> M  +3    -0    kmymoney/views/kinvestmentview.cpp
> 
> https://invent.kde.org/office/kmymoney/-/commit/
> 53934e86277ae369373289b93bdc63c76a82770a

Thank you Thomas!
Comment 3 Thomas Baumgart 2025-08-11 12:43:03 UTC
Git commit 52a2e5e65284c8bcfc6afaf63f68722b9fb35082 by Thomas Baumgart.
Committed on 11/08/2025 at 05:17.
Pushed by tbaumgart into branch '5.2'.

Enable QAction before using it

The behavior of a disabled QAction differs between Qt5 and Qt6
FIXED-IN: 5.2.2
(cherry picked from commit 53934e86277ae369373289b93bdc63c76a82770a)

M  +3    -0    kmymoney/views/kinvestmentview.cpp

https://invent.kde.org/office/kmymoney/-/commit/52a2e5e65284c8bcfc6afaf63f68722b9fb35082