Enable QAction before using it

The behavior of a disabled QAction differs between Qt5 and Qt6

BUG: 508081
FIXED-IN: 5.2.2
(cherry picked from commit 53934e86277ae369373289b93bdc63c76a82770a)